// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Search Index API fetchPages should return a list of pages 1: [body] 1`] = `
Object {
  "pages": Array [
    Object {
      "id": StringMatching /\\[a-f0-9\\]\\{24\\}/,
      "published_at": StringMatching /\\\\d\\{4\\}-\\\\d\\{2\\}-\\\\d\\{2\\}T\\\\d\\{2\\}:\\\\d\\{2\\}:\\\\d\\{2\\}\\\\\\.000Z/,
      "status": "published",
      "title": "Contribute",
      "url": "http://127.0.0.1:2369/contribute/",
      "visibility": "public",
    },
    Object {
      "id": StringMatching /\\[a-f0-9\\]\\{24\\}/,
      "published_at": StringMatching /\\\\d\\{4\\}-\\\\d\\{2\\}-\\\\d\\{2\\}T\\\\d\\{2\\}:\\\\d\\{2\\}:\\\\d\\{2\\}\\\\\\.000Z/,
      "status": "published",
      "title": "Privacy",
      "url": "http://127.0.0.1:2369/privacy/",
      "visibility": "public",
    },
    Object {
      "id": StringMatching /\\[a-f0-9\\]\\{24\\}/,
      "published_at": StringMatching /\\\\d\\{4\\}-\\\\d\\{2\\}-\\\\d\\{2\\}T\\\\d\\{2\\}:\\\\d\\{2\\}:\\\\d\\{2\\}\\\\\\.000Z/,
      "status": "published",
      "title": "Contact",
      "url": "http://127.0.0.1:2369/contact/",
      "visibility": "public",
    },
    Object {
      "id": StringMatching /\\[a-f0-9\\]\\{24\\}/,
      "published_at": StringMatching /\\\\d\\{4\\}-\\\\d\\{2\\}-\\\\d\\{2\\}T\\\\d\\{2\\}:\\\\d\\{2\\}:\\\\d\\{2\\}\\\\\\.000Z/,
      "status": "published",
      "title": "About this site",
      "url": "http://127.0.0.1:2369/about/",
      "visibility": "public",
    },
    Object {
      "id": StringMatching /\\[a-f0-9\\]\\{24\\}/,
      "published_at": StringMatching /\\\\d\\{4\\}-\\\\d\\{2\\}-\\\\d\\{2\\}T\\\\d\\{2\\}:\\\\d\\{2\\}:\\\\d\\{2\\}\\\\\\.000Z/,
      "status": "published",
      "title": "This is a static page",
      "url": "http://127.0.0.1:2369/static-page-test/",
      "visibility": "public",
    },
  ],
}
`;

exports[`Search Index API fetchPages should return a list of pages 2: [headers] 1`] = `
Object {
  "access-control-allow-origin": "http://127.0.0.1:2369",
  "cache-control": "no-cache, private, no-store, must-revalidate, max-stale=0, post-check=0, pre-check=0",
  "content-length": "926",
  "content-type": "application/json; charset=utf-8",
  "content-version": StringMatching /v\\\\d\\+\\\\\\.\\\\d\\+/,
  "etag": StringMatching /\\(\\?:W\\\\/\\)\\?"\\(\\?:\\[ !#-\\\\x7E\\\\x80-\\\\xFF\\]\\*\\|\\\\r\\\\n\\[\\\\t \\]\\|\\\\\\\\\\.\\)\\*"/,
  "vary": "Accept-Version, Origin, Accept-Encoding",
  "x-powered-by": "Express",
}
`;

exports[`Search Index API fetchPosts should return a list of posts 1: [body] 1`] = `
Object {
  "posts": Array [
    Object {
      "id": StringMatching /\\[a-f0-9\\]\\{24\\}/,
      "published_at": StringMatching /\\\\d\\{4\\}-\\\\d\\{2\\}-\\\\d\\{2\\}T\\\\d\\{2\\}:\\\\d\\{2\\}:\\\\d\\{2\\}\\\\\\.000Z/,
      "status": "published",
      "title": "Start here for a quick overview of everything you need to know",
      "url": "http://127.0.0.1:2369/welcome/",
      "visibility": "public",
    },
    Object {
      "id": StringMatching /\\[a-f0-9\\]\\{24\\}/,
      "published_at": StringMatching /\\\\d\\{4\\}-\\\\d\\{2\\}-\\\\d\\{2\\}T\\\\d\\{2\\}:\\\\d\\{2\\}:\\\\d\\{2\\}\\\\\\.000Z/,
      "status": "published",
      "title": "Customizing your brand and design settings",
      "url": "http://127.0.0.1:2369/design/",
      "visibility": "public",
    },
    Object {
      "id": StringMatching /\\[a-f0-9\\]\\{24\\}/,
      "published_at": StringMatching /\\\\d\\{4\\}-\\\\d\\{2\\}-\\\\d\\{2\\}T\\\\d\\{2\\}:\\\\d\\{2\\}:\\\\d\\{2\\}\\\\\\.000Z/,
      "status": "published",
      "title": "Writing and managing content in Ghost, an advanced guide",
      "url": "http://127.0.0.1:2369/write/",
      "visibility": "public",
    },
    Object {
      "id": StringMatching /\\[a-f0-9\\]\\{24\\}/,
      "published_at": StringMatching /\\\\d\\{4\\}-\\\\d\\{2\\}-\\\\d\\{2\\}T\\\\d\\{2\\}:\\\\d\\{2\\}:\\\\d\\{2\\}\\\\\\.000Z/,
      "status": "published",
      "title": "Building your audience with subscriber signups",
      "url": "http://127.0.0.1:2369/portal/",
      "visibility": "public",
    },
    Object {
      "id": StringMatching /\\[a-f0-9\\]\\{24\\}/,
      "published_at": StringMatching /\\\\d\\{4\\}-\\\\d\\{2\\}-\\\\d\\{2\\}T\\\\d\\{2\\}:\\\\d\\{2\\}:\\\\d\\{2\\}\\\\\\.000Z/,
      "status": "published",
      "title": "Selling premium memberships with recurring revenue",
      "url": "http://127.0.0.1:2369/sell/",
      "visibility": "paid",
    },
    Object {
      "id": StringMatching /\\[a-f0-9\\]\\{24\\}/,
      "published_at": StringMatching /\\\\d\\{4\\}-\\\\d\\{2\\}-\\\\d\\{2\\}T\\\\d\\{2\\}:\\\\d\\{2\\}:\\\\d\\{2\\}\\\\\\.000Z/,
      "status": "published",
      "title": "How to grow your business around an audience",
      "url": "http://127.0.0.1:2369/grow/",
      "visibility": "public",
    },
    Object {
      "id": StringMatching /\\[a-f0-9\\]\\{24\\}/,
      "published_at": StringMatching /\\\\d\\{4\\}-\\\\d\\{2\\}-\\\\d\\{2\\}T\\\\d\\{2\\}:\\\\d\\{2\\}:\\\\d\\{2\\}\\\\\\.000Z/,
      "status": "published",
      "title": "Setting up apps and custom integrations",
      "url": "http://127.0.0.1:2369/integrations/",
      "visibility": "public",
    },
    Object {
      "id": StringMatching /\\[a-f0-9\\]\\{24\\}/,
      "published_at": StringMatching /\\\\d\\{4\\}-\\\\d\\{2\\}-\\\\d\\{2\\}T\\\\d\\{2\\}:\\\\d\\{2\\}:\\\\d\\{2\\}\\\\\\.000Z/,
      "status": "published",
      "title": "Not so short, bit complex",
      "url": "http://127.0.0.1:2369/not-so-short-bit-complex/",
      "visibility": "public",
    },
    Object {
      "id": StringMatching /\\[a-f0-9\\]\\{24\\}/,
      "published_at": StringMatching /\\\\d\\{4\\}-\\\\d\\{2\\}-\\\\d\\{2\\}T\\\\d\\{2\\}:\\\\d\\{2\\}:\\\\d\\{2\\}\\\\\\.000Z/,
      "status": "published",
      "title": "Short and Sweet",
      "url": "http://127.0.0.1:2369/short-and-sweet/",
      "visibility": "public",
    },
    Object {
      "id": StringMatching /\\[a-f0-9\\]\\{24\\}/,
      "published_at": StringMatching /\\\\d\\{4\\}-\\\\d\\{2\\}-\\\\d\\{2\\}T\\\\d\\{2\\}:\\\\d\\{2\\}:\\\\d\\{2\\}\\\\\\.000Z/,
      "status": "published",
      "title": "Ghostly Kitchen Sink",
      "url": "http://127.0.0.1:2369/ghostly-kitchen-sink/",
      "visibility": "public",
    },
    Object {
      "id": StringMatching /\\[a-f0-9\\]\\{24\\}/,
      "published_at": StringMatching /\\\\d\\{4\\}-\\\\d\\{2\\}-\\\\d\\{2\\}T\\\\d\\{2\\}:\\\\d\\{2\\}:\\\\d\\{2\\}\\\\\\.000Z/,
      "status": "published",
      "title": "HTML Ipsum",
      "url": "http://127.0.0.1:2369/html-ipsum/",
      "visibility": "public",
    },
  ],
}
`;

exports[`Search Index API fetchPosts should return a list of posts 1: [headers] 1`] = `
Object {
  "access-control-allow-origin": "http://127.0.0.1:2369",
  "cache-control": "no-cache, private, no-store, must-revalidate, max-stale=0, post-check=0, pre-check=0",
  "content-length": "106403",
  "content-type": "application/json; charset=utf-8",
  "content-version": StringMatching /v\\\\d\\+\\\\\\.\\\\d\\+/,
  "etag": StringMatching /\\(\\?:W\\\\/\\)\\?"\\(\\?:\\[ !#-\\\\x7E\\\\x80-\\\\xFF\\]\\*\\|\\\\r\\\\n\\[\\\\t \\]\\|\\\\\\\\\\.\\)\\*"/,
  "vary": "Accept-Version, Origin, Accept-Encoding",
  "x-powered-by": "Express",
}
`;

exports[`Search Index API fetchPosts should return a list of posts 2: [headers] 1`] = `
Object {
  "access-control-allow-origin": "http://127.0.0.1:2369",
  "cache-control": "no-cache, private, no-store, must-revalidate, max-stale=0, post-check=0, pre-check=0",
  "content-length": "2313",
  "content-type": "application/json; charset=utf-8",
  "content-version": StringMatching /v\\\\d\\+\\\\\\.\\\\d\\+/,
  "etag": StringMatching /\\(\\?:W\\\\/\\)\\?"\\(\\?:\\[ !#-\\\\x7E\\\\x80-\\\\xFF\\]\\*\\|\\\\r\\\\n\\[\\\\t \\]\\|\\\\\\\\\\.\\)\\*"/,
  "vary": "Accept-Version, Origin, Accept-Encoding",
  "x-powered-by": "Express",
}
`;

exports[`Search Index API fetchTags should return a list of tags 1: [body] 1`] = `
Object {
  "tags": Array [
    Object {
      "id": StringMatching /\\[a-f0-9\\]\\{24\\}/,
      "name": "injection",
      "slug": "injection",
      "url": "http://127.0.0.1:2369/404/",
    },
    Object {
      "id": StringMatching /\\[a-f0-9\\]\\{24\\}/,
      "name": "pollo",
      "slug": "pollo",
      "url": "http://127.0.0.1:2369/404/",
    },
    Object {
      "id": StringMatching /\\[a-f0-9\\]\\{24\\}/,
      "name": "chorizo",
      "slug": "chorizo",
      "url": "http://127.0.0.1:2369/tag/chorizo/",
    },
    Object {
      "id": StringMatching /\\[a-f0-9\\]\\{24\\}/,
      "name": "bacon",
      "slug": "bacon",
      "url": "http://127.0.0.1:2369/tag/bacon/",
    },
    Object {
      "id": StringMatching /\\[a-f0-9\\]\\{24\\}/,
      "name": "kitchen sink",
      "slug": "kitchen-sink",
      "url": "http://127.0.0.1:2369/tag/kitchen-sink/",
    },
    Object {
      "id": StringMatching /\\[a-f0-9\\]\\{24\\}/,
      "name": "Getting Started",
      "slug": "getting-started",
      "url": "http://127.0.0.1:2369/tag/getting-started/",
    },
  ],
}
`;

exports[`Search Index API fetchTags should return a list of tags 1: [headers] 1`] = `
Object {
  "access-control-allow-origin": "http://127.0.0.1:2369",
  "cache-control": "no-cache, private, no-store, must-revalidate, max-stale=0, post-check=0, pre-check=0",
  "content-length": "693",
  "content-type": "application/json; charset=utf-8",
  "content-version": StringMatching /v\\\\d\\+\\\\\\.\\\\d\\+/,
  "etag": StringMatching /\\(\\?:W\\\\/\\)\\?"\\(\\?:\\[ !#-\\\\x7E\\\\x80-\\\\xFF\\]\\*\\|\\\\r\\\\n\\[\\\\t \\]\\|\\\\\\\\\\.\\)\\*"/,
  "vary": "Accept-Version, Origin, Accept-Encoding",
  "x-powered-by": "Express",
}
`;

exports[`Search Index API fetchTags should return a list of tags 2: [headers] 1`] = `
Object {
  "access-control-allow-origin": "http://127.0.0.1:2369",
  "cache-control": "no-cache, private, no-store, must-revalidate, max-stale=0, post-check=0, pre-check=0",
  "content-length": "693",
  "content-type": "application/json; charset=utf-8",
  "content-version": StringMatching /v\\\\d\\+\\\\\\.\\\\d\\+/,
  "etag": StringMatching /\\(\\?:W\\\\/\\)\\?"\\(\\?:\\[ !#-\\\\x7E\\\\x80-\\\\xFF\\]\\*\\|\\\\r\\\\n\\[\\\\t \\]\\|\\\\\\\\\\.\\)\\*"/,
  "vary": "Accept-Version, Origin, Accept-Encoding",
  "x-powered-by": "Express",
}
`;

exports[`Search Index API fetchUsers should return a list of users 1: [body] 1`] = `
Object {
  "users": Array [
    Object {
      "id": Any<String>,
      "name": "Joe Bloggs",
      "profile_image": "https://example.com/super_photo.jpg",
      "slug": "joe-bloggs",
      "url": "http://127.0.0.1:2369/author/joe-bloggs/",
    },
    Object {
      "id": Any<String>,
      "name": "Ghost",
      "profile_image": "https://static.ghost.org/v4.0.0/images/ghost-user.png",
      "slug": "ghost",
      "url": "http://127.0.0.1:2369/author/ghost/",
    },
  ],
}
`;

exports[`Search Index API fetchUsers should return a list of users 2: [headers] 1`] = `
Object {
  "access-control-allow-origin": "http://127.0.0.1:2369",
  "cache-control": "no-cache, private, no-store, must-revalidate, max-stale=0, post-check=0, pre-check=0",
  "content-length": "345",
  "content-type": "application/json; charset=utf-8",
  "content-version": StringMatching /v\\\\d\\+\\\\\\.\\\\d\\+/,
  "etag": StringMatching /\\(\\?:W\\\\/\\)\\?"\\(\\?:\\[ !#-\\\\x7E\\\\x80-\\\\xFF\\]\\*\\|\\\\r\\\\n\\[\\\\t \\]\\|\\\\\\\\\\.\\)\\*"/,
  "vary": "Accept-Version, Origin, Accept-Encoding",
  "x-powered-by": "Express",
}
`;
